// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error 1`] = `
[Error: 
    number: 123
    string: 'abc'
    undefined: undefined
    function: [Function]
    class: [Function: MyClass]
    object: { abc: 123, def: 456 }
    array: [ 0, 1, 2, 3, 4 ]
  ]
`;

exports[`RangeError 1`] = `
[RangeError: 
    number: 123
    string: 'abc'
    undefined: undefined
    function: [Function]
    class: [Function: MyClass]
    object: { abc: 123, def: 456 }
    array: [ 0, 1, 2, 3, 4 ]
  ]
`;

exports[`SyntaxError 1`] = `
[SyntaxError: 
    number: 123
    string: 'abc'
    undefined: undefined
    function: [Function]
    class: [Function: MyClass]
    object: { abc: 123, def: 456 }
    array: [ 0, 1, 2, 3, 4 ]
  ]
`;

exports[`TypeError 1`] = `
[TypeError: 
    number: 123
    string: 'abc'
    undefined: undefined
    function: [Function]
    class: [Function: MyClass]
    object: { abc: 123, def: 456 }
    array: [ 0, 1, 2, 3, 4 ]
  ]
`;
